<resources>
    <string name="app_name">PizzaChecker</string>
    <string name="checkButton">Sprawdź</string>
    <string name="etSize">Rozmiar pizzy [cm]</string>
    <string name="etPrice">Cena pizzy [zł]</string>
    <string name="tvWynikCena">Ilość pizzy za 1zł</string>
    <string name="restartGame">Restart</string>
    <string name="won">Wygrałeś</string>
    <string name="lost">Przegrałeś</string>
    <string name="draw">Remis</string>
    <string name="menu">Menu</string>
    <string name="tictactoeButton">Czekadełko</string>
    <string name="settingsButton">Ustawienia</string>
    <string name="weatherButton">Pogoda</string>

    <string-array name="menuTitles">
        <item>Sprawdź pizze</item>
        <item>Poczekadełko</item>
        <item>Pogoda</item>
    </string-array>

</resources>
